# good-practices

./: README.md  pyproject.toml
good_practices/: notebook.ipynb
