[tool.poetry]
name = "good-practices"
version = "0.1.0"
description = "Good practices for coding using notebooks"
authors = ["Jalal IZEKKI <jalal.izekki99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {extras = ["jupyter"], version = "^21.12b0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
